tests/errors/surf_parse_05.experr
error: expected an indented block